compiler/testData/diagnostics/tests/testsWithExplicitApi/publishedApi.kt
// SKIP_TXT
// WITH_RUNTIME

public class A {
    @PublishedApi
    internal fun <!NO_EXPLICIT_RETURN_TYPE_IN_API_MODE!>foo<!>() = 1
}